added product details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="descending_order">Descending Order</string>
     <string name="ascending_order">Ascending Order</string>
     <string name="rs">\u20B9</string>
+    <string name="search_your_product">Search your product</string>
 </resources>
